# YareEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  References.txt
Docs/: QuickStart.md  TODO.md
YareEngine/: CMakeLists.txt
YareEngine/Assets/: CMakeLists.txt
YareEngine/Assets/Shaders/: phong.frag  phong.vert  shader.frag  skybox.frag  skybox.vert
YareEngine/Content/: CMakeLists.txt
YareEngine/Content/Shaders/: depth_layer.frag  depth_layer.vert  flat.frag  flat.vert  flat_mesh.frag  layer.frag  light_depth.frag  light_depth.vert  mesh.frag  mesh_phong.frag  phong.frag  phong.vert  phong_layer.frag  phong_mesh.frag  phong_mesh.vert  post_color.frag  quad_textured.frag  quad_textured.vert  shadow_layer.frag  shadow_layer.vert  skybox.frag  unlit_layer.frag  unlit_layer.vert  unlit_mesh.frag  unlit_mesh.vert
YareEngine/Yare/: App.cpp  App.hpp  Application.cpp  Asset.cpp  Asset.hpp  AssetManager.cpp  AssetManager.hpp  FileSystem.cpp  FileSystem.hpp  Input.hpp  Keys.hpp  Layer.cpp  Layer.hpp  RenderPass.cpp  RenderPass.hpp  Renderable.cpp  Renderable.hpp  Renderer.cpp  Renderer.hpp  RendererDeferred.hpp  Scene.cpp  Scene.hpp  SkyBox.cpp  SkyBox.hpp  SkySphere.cpp  SkySphere.hpp
YareEngine/Yare/Assets/: TextureAsset.cpp  TextureAsset.hpp
YareEngine/Yare/GL/: Error.cpp  Error.hpp  Shader.cpp  Shader.hpp
YareEngine/Yare/Geometry/: Box.cpp  Box.hpp  Geometry.hpp  Quad.cpp  Quad.hpp  Sphere.cpp  Sphere.hpp
YareEngine/Yare/Graphics/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Config.hpp  Cubemap.cpp  Cubemap.hpp  Entity.cpp  Entity.hpp  Error.cpp  Error.hpp  Graphics.cpp  Graphics.hpp  Light.cpp  Light.hpp  LightBlock.cpp  LightBlock.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Platform.cpp  Platform.hpp  Primitives.cpp  Primitives.hpp  RenderTarget.cpp  RenderTarget.hpp  Renderable.cpp  Renderable.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  SkyBox.cpp  SkyBox.hpp  Texture.cpp  Texture.hpp  TextureBlock.cpp  TextureBlock.hpp  UniformBlock.cpp  (+4 more)
YareEngine/Yare/Graphics/Materials/: FlatMaterial.cpp  FlatMaterial.hpp  PhongMaterial.cpp  PhongMaterial.hpp
YareEngine/Yare/Graphics/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLCommon.hpp  OpenGLError.cpp  OpenGLError.hpp  OpenGLRenderTarget.cpp  OpenGLRenderTarget.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp
YareEngine/Yare/Materials/: FlatMaterial.cpp  FlatMaterial.hpp  PhongMaterial.cpp  PhongMaterial.hpp
YareEngine/Yare/OS/: FileSystem.cpp  FileSystem.hpp
YareEngine/Yare/Renderer/: Buffer.cpp  Buffer.hpp  Error.cpp  Error.hpp  Platform.cpp  Platform.hpp  Primitives.cpp  Primitives.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
YareEngine/Yare/Renderer/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLCommon.hpp  OpenGLError.cpp  OpenGLError.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp
YareEngine/Yare/System/: FileSystem.cpp  FileSystem.hpp  System.hpp
YareSandbox/: CMakeLists.txt
YareSandbox/Assets/: CMakeLists.txt
YareSandbox/Assets/Shaders/: shader.frag  shader.vert  skybox.frag  skybox.vert
YareSandbox/Content/: CMakeLists.txt
YareSandbox/Source/: ExampleApp.cpp  ExampleApp.hpp  main.cpp
